--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 class="prowsin" aria-selected="false">تصفح واشتري في اول متجر الكتروني في سبها</h2>
         <p class="explin active">تصفح واستمتع في افضل متجر الكتروني في سبها <br>واستمتع بشراء منتجاتك من منزلك مع توفر خدمة التوصيل </p>
              <button class="btn_regist btn">التسجيل</button>
-             <button class="btn_prows btn"><a href="start.html" class="the_brows">التصفح</a></button>
+             <button class="btn_prows btn"><a href="click_to_take_1/start.html" class="the_brows">التصفح</a></button>
         </div>
     </div>
     </div>
