--- a/click_to_take_1/products.html
+++ b/click_to_take_1/products.html
@@ -16,6 +16,8 @@
         <div class="continer">
             <div class="logo">
                 <img src="../image/LogoSample_ByTailorBrands.jpg" alt="" draggable="false">
+                <input type="search" name="search" id="search" placeholder="                   ابحث عن منتج او محل ">
+
             </div>
             <ul class="list family">
                 <li><a href="start.html" ><i class="fa-solid fa-xl fa-home" ></i></a></li>
