--- a/click_to_take_1/products.html
+++ b/click_to_take_1/products.html
@@ -20,10 +20,12 @@
 
             </div>
             <ul class="list family">
-                <li><a href="start.html" ><i class="fa-solid fa-xl fa-home" ></i></a></li>
-                <li><a href="products.html" class="active"><i class="fa-solid fa-xl fa-cart-shopping active"></i></a></li>
+                <li><a href="products.html" class="active"><i class="fa-solid fa-xl fa-bag-shopping active"></i></a></li>
                 <li><a href="#" ><i class="fa-solid fa-xl fa-shop"></i></a></li>
+                <li><a href="start.html" ><i class="fa-solid fa-xl fa-home" ></i></a></li>
+
                 <li><a href="#"><i class="fa-solid fa-xl fa-bell"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-xl fa-basket-shopping"></i></a></li>
                 <li><a class="option" href="#"><i class="fa-solid fa-xl fa-bars">
                     <ul class="dropdown">
                         <li>profil</li>
