--- a/click_to_take_1/products.html
+++ b/click_to_take_1/products.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/all.min.css">
 <script src="https://kit.fontawesome.com/1eaed65929.js" crossorigin="anonymous"></script>
+<link rel="icon" type="image/png" href="../image/LogoSample_ByTailorBrands.jpg">
+
 </head>
 <body>
 
@@ -21,7 +23,7 @@
             </div>
             <ul class="list family">
                 <li><a href="products.html" class="active"><i class="fa-solid fa-xl fa-bag-shopping active"></i></a></li>
-                <li><a href="#" ><i class="fa-solid fa-xl fa-shop"></i></a></li>
+                <li><a href="stores.html" ><i class="fa-solid fa-xl fa-shop"></i></a></li>
                 <li><a href="start.html" ><i class="fa-solid fa-xl fa-home" ></i></a></li>
 
                 <li><a href="#"><i class="fa-solid fa-xl fa-bell"></i></a></li>
