--- a/click_to_take_1/stores.html
+++ b/click_to_take_1/stores.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/all.min.css">
 <script src="https://kit.fontawesome.com/1eaed65929.js" crossorigin="anonymous"></script>
+<link rel="icon" type="image/png" href="../image/LogoSample_ByTailorBrands.jpg">
 
 
 </head>
