اضافة زر الاشعارت والسلة وتغيير الخلفية لزر اضافة الى السلة

--- a/click_to_take_1/start.html
+++ b/click_to_take_1/start.html
@@ -19,7 +19,7 @@
         <div class="continer">
             <div class="logo">
                 <img src="../image/LogoSample_ByTailorBrands.jpg" alt="" draggable="false">
-                <input type="search" name="search" id="search" placeholder="                   ابحث عن منتج او محل ">
+                <input type="search" dir="rtl" name="search" id="search" placeholder="                   ابحث عن منتج او محل ">
 
             </div>
             <ul class="list family">
@@ -27,8 +27,8 @@
                 <li><a href="stores.html" ><i class="fa-solid fa-xl fa-shop"></i></a></li>
                 <li><a href="start.html" class="active"><i class="fa-solid fa-xl fa-home active" ></i></a></li>
 
-                <li><a href="#"><i class="fa-solid fa-xl fa-bell"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-xl fa-basket-shopping"></i></a></li>
+                <li><a href="notefication.html"><i class="fa-solid fa-xl fa-bell"></i></a></li>
+                <li><a href="cart.html"><i class="fa-solid fa-xl fa-basket-shopping"></i></a></li>
                 <li><a class="option" href="#"><i class="fa-solid fa-xl fa-bars">
                     <ul class="dropdown">
                         <li>profil</li>
