اضافة زر السلة والاشعارات وتقليل الغاب بين المحلات

--- a/click_to_take_1/stores.html
+++ b/click_to_take_1/stores.html
@@ -19,16 +19,16 @@
         <div class="continer">
             <div class="logo">
                 <img src="../image/LogoSample_ByTailorBrands.jpg" alt="" draggable="false">
-                <input type="search" name="search" id="search" placeholder="                   ابحث عن منتج او محل ">
+                <input type="search" name="search" id="search" placeholder="                   ابحث عن منتج او محل " dir="rtl">
 
             </div>
             <ul class="list family">
                 <li><a href="products.html"><i class="fa-solid fa-xl fa-bag-shopping"></i></a></li>
-                <li><a href="stores.html" class="active"><i class="fa-solid fa-xl fa-shop"></i></a></li>
+                <li><a href="stores.html" class="active"><i class="fa-solid fa-xl fa-shop active"></i></a></li>
                 <li><a href="start.html" ><i class="fa-solid fa-xl fa-home" ></i></a></li>
 
-                <li><a href="#"><i class="fa-solid fa-xl fa-bell"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-xl fa-basket-shopping"></i></a></li>
+                <li><a href="notefication.html"><i class="fa-solid fa-xl fa-bell"></i></a></li>
+                <li><a href="cart.html"><i class="fa-solid fa-xl fa-basket-shopping"></i></a></li>
                 <li><a class="option" href="#"><i class="fa-solid fa-xl fa-bars">
                     <ul class="dropdown">
                         <li>profil</li>
@@ -48,20 +48,53 @@
         <h3>محل الكرم للملابس النسائية</h3>
 
         <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
-</a><hr><hr>
+</a>
 
     <a href="#" class="store">
         <h3>محل الكرم للملابس النسائية</h3>
 
         <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
     </a>
-   <hr><hr>
+   
     <a href="#" class="store">
         <h3>محل الكرم للملابس النسائية</h3>
 
         <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
 </a>
-<hr>
+<a  href="#"  class="store">
+    <h3>محل الكرم للملابس النسائية</h3>
+
+    <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
+</a>
+
+<a href="#" class="store">
+    <h3>محل الكرم للملابس النسائية</h3>
+
+    <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
+</a>
+
+<a href="#" class="store">
+    <h3>محل الكرم للملابس النسائية</h3>
+
+    <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
+</a>
+<a  href="#"  class="store">
+    <h3>محل الكرم للملابس النسائية</h3>
+
+    <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
+</a>
+
+<a href="#" class="store">
+    <h3>محل الكرم للملابس النسائية</h3>
+
+    <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
+</a>
+
+<a href="#" class="store">
+    <h3>محل الكرم للملابس النسائية</h3>
+
+    <img src="../image/محل الكرم.jpg" alt="" height="100px" width="100px">
+</a>
 </section>
     
     
