--- a/click_to_take_1/products.html
+++ b/click_to_take_1/products.html
@@ -18,7 +18,9 @@
         <div class="continer">
             <div class="logo">
                 <img src="../image/LogoSample_ByTailorBrands.jpg" alt="" draggable="false">
-                <input type="search" name="search" id="search" placeholder="                   ابحث عن منتج او محل ">
+                <input type="search" name="search" id="search" placeholder="                   ابحث عن منتج او محل "dir="rtl">
+            
+            </input>
 
             </div>
             <ul class="list family">
@@ -26,8 +28,8 @@
                 <li><a href="stores.html" ><i class="fa-solid fa-xl fa-shop"></i></a></li>
                 <li><a href="start.html" ><i class="fa-solid fa-xl fa-home" ></i></a></li>
 
-                <li><a href="#"><i class="fa-solid fa-xl fa-bell"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-xl fa-basket-shopping"></i></a></li>
+                <li><a href="notefication.html"><i class="fa-solid fa-xl fa-bell"></i></a></li>
+                <li><a href="cart.html"><i class="fa-solid fa-xl fa-basket-shopping"></i></a></li>
                 <li><a class="option" href="#"><i class="fa-solid fa-xl fa-bars">
                     <ul class="dropdown">
                         <li>profil</li>
